--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
     <title>Slick Photo Gallery</title>
   </head>
-  
-  <body>
 
+  <body>
     <div class="navbar">
       <div class="logo">
         <img src="/img/frame.png" alt="" />
@@ -24,28 +26,37 @@
     </div>
 
     <section class="center slider">
-            <div>
-                 <img src="/img/1.jpg" alt="">
-                 <h3>PHOTO 1</h3>
-                 <p>...</p>
-            </div>
-            <div>
-                 <img src="/img/2.jpg" alt="">
-                 <h3>PHOTO 2</h3>
-                 <p>...</p>
-            </div>
-            <div>
-                 <img src="/img/3.jpg" alt="">
-                 <h3>PHOTO 3</h3>
-                 <p>...</p>
-            </div>
-       </section>
-  
-       <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-       <script src="/slick/slick.min.js" type="text/javascript" charset="utf-8"></script>
-       <script src="main.js" text="javascript"></script>
+      <div>
+        <img src="/img/1.jpg" alt="" />
+        <h3>PHOTO 1</h3>
+        <p>...</p>
+      </div>
+      <div>
+        <img src="/img/2.jpg" alt="" />
+        <h3>PHOTO 2</h3>
+        <p>...</p>
+      </div>
+      <div>
+        <img src="/img/3.jpg" alt="" />
+        <h3>PHOTO 3</h3>
+        <p>...</p>
+      </div>
+      <div>
+        <img src="/img/4.jpg" alt="" />
+        <h3>PHOTO 4</h3>
+        <p>...</p>
+      </div>
+    </section>
 
-
-
+    <script
+      src="https://code.jquery.com/jquery-2.2.0.min.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="/slick/slick.min.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
+    <script src="main.js" text="javascript"></script>
   </body>
 </html>
